可以操作文章

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title></title>
-	<script type="text/javascript" src="{{static_url("jquery-1.11.3.min.js")}}"></script>
+	<script type="text/javascript" src="{{static_url("js/jquery-1.11.3.min.js")}}"></script>
 </head>
 <body>
 	<form action="/404" method="post" accept-charset="utf-8" id="ajaxform">
