--- a/static/css/home.css
+++ b/static/css/home.css
@@ -1,15 +1,12 @@
-.banner { position: relative; overflow: auto; }
-    .banner li { list-style: none; }
-        .banner ul li { float: left; }
-
-.homeslide{
-	width: 20%;
-	height: 10%;
+h1.center,
+h6.center
+{
+	margin-left:auto;
+	margin-right:auto;
+	text-align: center;
 }
 
-div.homeslide{
-	background-color: #000000;
-	width: 60%;
-	height: 50%;
-
+.navbar-title{
+	margin-bottom: auto;
+	margin-top: auto;
 }
