--- a/templates/homepage/cache.html
+++ b/templates/homepage/cache.html
@@ -44,11 +44,11 @@
 		<span class="menu"><img src="{{static_url("img/home/menu.png")}}" alt=""/></span>
 				<ul class="nav1">
 					<li><a class="active" href="/404">DESIGN FOLIO</a></li>
-					<li><a href="/home/services">SERVICES</a></li>
-					<li><a href="/home/business">  OUR BUSINESS </a></li>
-					<li><a href="/home/about">HOW WE HELP</a></li>	
-					<li><a href="/home/404error">TAKE THE TOUR</a></li>
-					<li><a href="/home/contact">CONTACT</a></li>
+					<li><a href="/home/services">Services</a></li>
+					<li><a href="/home/business">Our Project</a></li>
+					<li><a href="/home/about">About</a></li>	
+					<li><a href="/home/single">Blog</a></li>
+					<li><a href="/home/contact">Contact</a></li>
 				</ul>
 				<!-- script for menu -->
 					<script> 
