--- a/templates/homepage/contact.html
+++ b/templates/homepage/contact.html
@@ -2,13 +2,14 @@
 {% block title %}contact us{% end %}
 <!-- header -->
 {% block content %}
+<script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=ZvGx486DtaVtWrydYG5uOAPA"></script>
 <div class="contact">
 	<div class="container">
 		<div class="contact-info">
 			<h3>GET IN <span> TOUCH</span></h3>
 		</div>
 		<div class="contact-map">
-			<iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d2482.432383990807!2d0.028213999961443994!3d51.52362882484525!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sin!4v1423469959819" frameborder="0" style="border:0"></iframe>
+			<div id="map" style="width: 1000px;height: 300px"></div>
 		</div>
 		<div class="contact-form">
 			<div class="contact-info">
@@ -29,4 +30,17 @@
 		</div>
 	</div>
 </div>
+<script type="text/javascript">
+	$(document).ready(function() {
+		// body...
+		var map = new BMap.Map("map");
+		map.centerAndZoom(new BMap.Point(118.832858, 31.888646), 18);
+		map.enableScrollWheelZoom(true);
+		map.clearOverlays();
+		var new_point = new BMap.Point(118.832858, 31.888646);
+		var marker = new BMap.Marker(new_point); // 创建标注
+		map.addOverlay(marker); // 将标注添加到地图中
+		map.panTo(new_point);
+	});
+</script>
 {% end %}
