--- a/templates/homepage/index.html
+++ b/templates/homepage/index.html
@@ -441,7 +441,7 @@
 			<!-- pop-up-box -->
 					<!-- script for pop-up-box -->
 					<script type="text/javascript" src="{{static_url("js/modernizr.custom.min.js")}}"></script>    
-					<link href="css/popuo-box.css" rel="stylesheet" type="text/css" media="all" />
+					<link href="{{static_url("css/popuo-box.css")}}" rel="stylesheet" type="text/css" media="all" />
 					<script src="{{static_url("js/jquery.magnific-popup.js")}}" type="text/javascript"></script>
 					<!-- //script for pop-up-box -->
 					<!-- <div id="small-dialog1" class="mfp-hide">
