修改剩下的资源的路径问题

--- a/templates/homepage/business.html
+++ b/templates/homepage/business.html
@@ -9,7 +9,7 @@
 			<h3>OUR <span>BUSINESS</span></h3>
 		</div>
 		<div class="col-md-4 business-left">
-			<img src="images/pic1.jpg" alt=""/>
+			<img src="{{static_url("img/home/pic1.jpg")}}g" alt=""/>
 		</div>
 		<div class="col-md-8 business-right">
 			<h3>NEQUE PORRO QUISQUAM EST QUI DOLOREM IPSUM QUIA DOLOR SIT AMET, CONSECTETUR </h3>
@@ -29,7 +29,7 @@
 		</div>
 		<div class="business-grids">
 			<div class="col-md-3 business-grid">
-				<img src="images/ddd.jpg" alt=""/>
+				<img src="{{static_url("img/home/ddd.jpg")}}" alt=""/>
 				<p>Adipisci velit maiores alias consequatur aut 
 			perferendis doloribus asperiores repellat. Consequatur eos et accusamus et iusto odio</p>
 				<div class="busi-pos">
@@ -37,7 +37,7 @@
 				</div>
 			</div>
 			<div class="col-md-3 business-grid">
-				<img src="images/eee.jpg" alt=""/>
+				<img src="{{static_url("img/home/eee.jpg")}}" alt=""/>
 				<p>Adipisci velit maiores alias consequatur aut 
 			perferendis doloribus asperiores repellat. Consequatur eos et accusamus et iusto odio</p>
 				<div class="busi-pos">
@@ -45,7 +45,7 @@
 				</div>
 			</div>
 			<div class="col-md-3 business-grid">
-				<img src="images/fff.jpg" alt=""/>
+				<img src="{{static_url("img/home/fff.jpg")}}" alt=""/>
 				<p>Adipisci velit maiores alias consequatur aut 
 			perferendis doloribus asperiores repellat. Consequatur eos et accusamus et iusto odio</p>
 				<div class="busi-pos">
@@ -53,7 +53,7 @@
 				</div>
 			</div>
 			<div class="col-md-3 business-grid">
-				<img src="images/ggg.jpg" alt=""/>
+				<img src="{{static_url("img/home/ggg.jpg")}}" alt=""/>
 				<p>Adipisci velit maiores alias consequatur aut 
 			perferendis doloribus asperiores repellat. Consequatur eos et accusamus et iusto odio</p>
 				<div class="busi-pos">
