修改资源路径，修改关于我们

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1091,6 +1091,9 @@ background:#455357;
 background:#63c6ae;
 padding:100px 0px;
 }
+.business-team p{
+  color: #63C6AE;
+}
 .team-info h3{
   margin: 0;
   color: #ffffff;
