--- a/templates/homepage/about.html
+++ b/templates/homepage/about.html
@@ -22,7 +22,7 @@
 				<a href="single.html">READ MORE</a>
 			</div>
 			<div class="col-md-5 about-grid">
-				<img class="img-responsive" src="images/pic2.jpg" alt=""/>
+				<img class="img-responsive" src="{{static_url("img/home/pic2.jpg")}}" alt=""/>
 			</div>
 			<div class="clearfix"></div>
 		</div>
@@ -61,19 +61,19 @@
 		</div>
 		<div class="approach-grids">
 			<div class="col-md-4 approach-grid">
-				<img class="img-responsive" src="images/k10.jpg" alt=""/>
+				<img class="img-responsive" src="{{static_url("img/home/k10.jpg")}}" alt=""/>
 				<p>Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, 
 				consectetur, adipisci velit, sed quia non numquam eius modi tempora </p>
 				<a href="single.html">MORE</a>
 			</div>
 			<div class="col-md-4 approach-grid">
-				<img class="img-responsive" src="images/k4.jpg" alt=""/>
+				<img class="img-responsive" src="{{static_url("img/home/k4.jpg")}}" alt=""/>
 				<p>Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, 
 				consectetur, adipisci velit, sed quia non numquam eius modi tempora </p>
 				<a href="single.html">MORE</a>
 			</div>
 			<div class="col-md-4 approach-grid">
-				<img class="img-responsive" src="images/k12.jpg" alt=""/>
+				<img class="img-responsive" src="{{static_url("img/home/k12.jpg")}}" alt=""/>
 				<p>Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, 
 				consectetur, adipisci velit, sed quia non numquam eius modi tempora </p>
 				<a href="single.html">MORE</a>
