--- a/templates/homepage/business.html
+++ b/templates/homepage/business.html
@@ -6,18 +6,15 @@
 <div class="business">
 	<div class="container">
 		<div class="business-info">
-			<h3>OUR <span>BUSINESS</span></h3>
+			<h3>我们的 <span>娱乐！活动！</span></h3>
 		</div>
 		<div class="col-md-4 business-left">
 			<img src="{{static_url("img/home/pic1.jpg")}}g" alt=""/>
 		</div>
 		<div class="col-md-8 business-right">
-			<h3>NEQUE PORRO QUISQUAM EST QUI DOLOREM IPSUM QUIA DOLOR SIT AMET, CONSECTETUR </h3>
-			<p>These cases are perfectly simple and easy to distinguish. In a free hour, 
-			when our power of choice is untrammelled and when nothing prevents our being 
-			able to do what we like best.adipisci velit maiores alias consequatur aut 
-			perferendis doloribus asperiores repellat.At vero eos et accusamus et iusto odio</p>
-			<a href="single.html">READ MORE</a>
+			<h3>宿舍放电影！怕不怕！</h3>
+			<p>继404推出理发服务后，今天再次推出我们的重磅惊喜：404宿舍影院。下一步将和隔壁403健身房合作，致力打造计院自己的梅园娱乐中心！</p>
+			<a href="/home/single">READ MORE</a>
 		</div>
 		<div class="clearfix"></div>
 	</div>
@@ -29,35 +26,31 @@
 		</div>
 		<div class="business-grids">
 			<div class="col-md-3 business-grid">
-				<img src="{{static_url("img/home/ddd.jpg")}}" alt=""/>
-				<p>Adipisci velit maiores alias consequatur aut 
-			perferendis doloribus asperiores repellat. Consequatur eos et accusamus et iusto odio</p>
+				<img src="{{static_url("img/home/He.jpg")}}" alt=""/>
+				<p>用计算机操控篮球弹吉他</p>
 				<div class="busi-pos">
-					<h3>PATRICK</h3>
+					<h3>He</h3>
 				</div>
 			</div>
 			<div class="col-md-3 business-grid">
-				<img src="{{static_url("img/home/eee.jpg")}}" alt=""/>
-				<p>Adipisci velit maiores alias consequatur aut 
-			perferendis doloribus asperiores repellat. Consequatur eos et accusamus et iusto odio</p>
+				<img src="{{static_url("img/home/J.jpg")}}" alt=""/>
+				<p>比一号床叼</p>
 				<div class="busi-pos">
-					<h3>JOHN DOE</h3>
+					<h3>Jzuoyi</h3>
 				</div>
 			</div>
 			<div class="col-md-3 business-grid">
-				<img src="{{static_url("img/home/fff.jpg")}}" alt=""/>
-				<p>Adipisci velit maiores alias consequatur aut 
-			perferendis doloribus asperiores repellat. Consequatur eos et accusamus et iusto odio</p>
+				<img src="{{static_url("img/home/P.png")}}" alt=""/>
+				<p>蛮叼</p>
 				<div class="busi-pos">
-					<h3>JESSICA</h3>
+					<h3>Piao</h3>
 				</div>
 			</div>
 			<div class="col-md-3 business-grid">
-				<img src="{{static_url("img/home/ggg.jpg")}}" alt=""/>
-				<p>Adipisci velit maiores alias consequatur aut 
-			perferendis doloribus asperiores repellat. Consequatur eos et accusamus et iusto odio</p>
+				<img src="{{static_url("img/home/Z.jpg")}}" alt=""/>
+				<p>傻逼一个</p>
 				<div class="busi-pos">
-					<h3>THOMPSON</h3>
+					<h3>Zzz</h3>
 				</div>
 			</div>
 			<div class="clearfix"></div>
