--- a/templates/homepage/single.html
+++ b/templates/homepage/single.html
@@ -12,7 +12,7 @@
 					<div class="post-details">
 						<p>Posted By <a href="#">Admin</a> &nbsp;&nbsp; On 15 jan, 2015 &nbsp;&nbsp; <a href="#">Comments</a>  (10)</p>
 					</div>
-					<img src="{{static_url("img/home/ppp.jpg")}}" alt="" />
+					<img src="{{static_url("img/home/movies.jpg")}}" alt="" />
 					<p>Nunc laoreet leo in pellentesque venenatis. Mauris id porttitor mauris. Integer malesuada nulla sit amet elit maximus.</p>
 					<p>volutpat nec velit ut, congue scelerisque tortor. 
 					Ut tincidunt malesuada tellus, eget ullamcorper mi. 
