--- a/templates/homepage/register.html
+++ b/templates/homepage/register.html
@@ -21,14 +21,21 @@
 <script type="text/javascript">
 	$(document).ready(function(){
 		$("#error1").hide();
+		
 		$("#btn_sub").click(function(){
-			var psd = $("#psd").val();
-			var conf_psd = $("#conf_psd").val();
-			if(psd != conf_psd){
-				$("#psd").text('');
-				$("#conf_psd").text('');
-				$("#error1").show();
-			}
+			var input_email = $("#email").text();
+			var input_name = $("#name").text();
+			var input_psd = $("#psd").val();
+			var input_confpsd = $("#conf_psd").val();
+			$.ajax({
+				url: '/register',
+				type: 'POST',
+				dataType: 'json',
+				data: {email: input_email,name : input_name,psd: input_psd , confpsd: input_confpsd},
+				success: function(data){
+					alert(data);
+				}
+			})			
 		});
 	});
 </script>
