--- a/templates/homepage/business.html
+++ b/templates/homepage/business.html
@@ -33,7 +33,7 @@
 				</div>
 			</div>
 			<div class="col-md-3 business-grid">
-				<img src="{{static_url("img/home/J.jpg")}}" alt=""/>
+				<img src="{{static_url("img/home/j.jpg")}}" alt=""/>
 				<p>比一号床叼</p>
 				<div class="busi-pos">
 					<h3>Jzuoyi</h3>
