--- a/templates/homepage/cache.html
+++ b/templates/homepage/cache.html
@@ -50,10 +50,11 @@
 					<li><a href="/home/about">About</a></li>	
 					<li><a href="/home/single">Blog</a></li>
 					<li><a href="/home/contact">Contact</a></li>
+					<li><a href="/home/login">Login</a></li>
 					{% if register!=True %}
 					<li><a href="/home/register">Register</a></li>
 					{% else %}
-					<li><a href="/home/register">Info</a></li>
+					<li><a href="/home/register">Register</a></li>
 					{% end %}
 
 				</ul>
